kubernetes/mango/apps/monitoring/loki/chart/templates/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
spec:
  hostnames:
    - loki.plexmox.com
  rules:
    - backendRefs:
        - kind: Service
          name: loki
          port: 3100
      matches:
        - path:
            type: PathPrefix
            value: /
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateways
